fixing spacing details

--- a/src/scss/notification.scss
+++ b/src/scss/notification.scss
@@ -7,6 +7,7 @@
     border-radius: 1rem;
     gap: min(3.73vw, 2rem);
     align-items: flex-start;
+    margin-top: 1rem;
 
     &[data-read="true"] {
         background-color: $white;
@@ -21,7 +22,6 @@
             border-radius: 50%;
             width: 1rem;
             height: 1rem;
-            margin-left: .8rem;
         }
     }
 
@@ -29,6 +29,10 @@
         flex-shrink: 0;
         width: min(10.6vw, 4.5rem); //4rem;
         height: min(10.6vw, 4.5rem); //4rem;
+
+        &:nth-of-type(2) {
+            margin-left: auto;
+        }
     }
     &__image {
         cursor: pointer;
@@ -37,6 +41,9 @@
         display: flex;
         flex-direction: column;
         line-height: 1.5;
+    }
+    &__text > * {
+        margin-right: .4ch;
     }
     &__username {
         font-weight: bold;
